# projetlo21

./: CMakeLists.txt
AxelThomas/: liste.c  liste.h  noeud.c  noeud.h
AxelThomas/flemme_de_tous_supp_regarde_la/: liste.c  liste.h  main.c  noeud.c  noeud.h  reseaux.c  reseaux.h  sous_couche.c  sous_couche.h
DavidCorentin/: CMakeLists.txt  couche.c  couche.h  création_liste.c  création_liste.h  main.c  neuronne.c  neuronne.h
